<resources>
    <string name="app_name">FFS</string>
    <string name="app_home">HOME</string>
    <string name="app_chat">CHAT</string>
    <string name="app_cart">CART</string>
    <string name="app_sell">SELL</string>
    <string name="app_settings">SETTINGS</string>

    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Accessibility description for navigation mDrawerLayout -->
    <string name="navdrawer_description_a11y">Navigation Drawer used to switch between major features of the application</string>
    <string name="title_activity_deleteme">deleteme</string>
    <string name="title_activity_2">Activity2</string>

    <string name="menu_search">Search</string>
    <string name="search_result">Search Results</string>
    <string name="search_hint">Search</string>

    <!-- Settings Page -->
    <string name="pref_user_name">Username</string>
    <string name="pref_user_name_summary">Change your username.</string>

    <string name="pref_user_password">Password</string>
    <string name="pref_user_password_summary">Change your password.</string>

    <string name="pref_user_items">Edit Items For Sale</string>
    <string name="pref_user_items_summary">Delete the items you are selling.</string>

    <string name="pref_user_profile">User Profile</string>

    <string name="pref_logout">Logout</string>

</resources>
