<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="200"
        app:showAsAction="never"/>


    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"
        appcompat:showAsAction="always"/>

</menu>